Project

General

Profile

Actions

Bug #59383

open

kafka: connection cannot recover from poll errors

Added by Yuval Lifshitz about 1 year ago. Updated about 1 year ago.

Status:
Pending Backport
Priority:
High
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
kafka backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if error (broker down) is happening while message is sent, or broker recovers within the internal kafka retry period, there is no issue.
however, if the error happens while rd_kafka_poll() is invoked, the connection is not destroyed and recreated, and never recovers even after the kafka broker is up again


Related issues 2 (2 open0 closed)

Copied to rgw - Backport #59496: reef: kafka: connection cannot recover from poll errorsIn ProgressYuval LifshitzActions
Copied to rgw - Backport #59497: quincy: kafka: connection cannot recover from poll errorsNewYuval LifshitzActions
Actions #1

Updated by Yuval Lifshitz about 1 year ago

this is a regression due to the timeout cleanup mechanism: introduced in: 8713c3169c0f9df1d2fc23ff2b82ede1e25be282

Actions #2

Updated by Yuval Lifshitz about 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 50965
Actions #3

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59496: reef: kafka: connection cannot recover from poll errors added
Actions #5

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59497: quincy: kafka: connection cannot recover from poll errors added
Actions #6

Updated by Backport Bot about 1 year ago

  • Tags changed from kafka to kafka backport_processed
Actions

Also available in: Atom PDF