rgw/kafka: failed to reconnect to broker after idle timeout

This is a regression due to: 8713c3169c0f9df1d2fc23ff2b82ede1e25be282

To reproduce, define a topic and a notification pointing to a kafka broker.
Stop the broker and upload objects to the cluster, wait for 30 seconds, and then start the broker.

Fixes: https://tracker.ceph.com/issues/59383?next_issue_id=59381

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit 054ddb2435d73070f3de717a6ad5a312351f4a45)

Conflicts:
	src/rgw/rgw_kafka.cc